build/log/idf_py_stderr_output_7038
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'pcm_playback_task':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:158:12: error: 'i2s_stream_cfg_t' has no member named 'i2s_config'
  158 |     i2s_cfg.i2s_config.sample_rate = 24000; // Gemini Live default
      |            ^
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:159:12: error: 'i2s_stream_cfg_t' has no member named 'i2s_config'
  159 |     i2s_cfg.i2s_config.bits_per_sample = 16;
      |            ^
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:160:12: error: 'i2s_stream_cfg_t' has no member named 'i2s_config'
  160 |     i2s_cfg.i2s_config.channel_format = I2S_CHANNEL_FMT_ONLY_LEFT; // Or RIGHT depending on speaker
      |            ^
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:160:41: error: 'I2S_CHANNEL_FMT_ONLY_LEFT' undeclared (first use in this function); did you mean 'I2S_CHANNEL_TYPE_ONLY_LEFT'?
  160 |     i2s_cfg.i2s_config.channel_format = I2S_CHANNEL_FMT_ONLY_LEFT; // Or RIGHT depending on speaker
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                                         I2S_CHANNEL_TYPE_ONLY_LEFT
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:160:41: note: each undeclared identifier is reported only once for each function it appears in
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:161:12: error: 'i2s_stream_cfg_t' has no member named 'i2s_port'
  161 |     i2s_cfg.i2s_port = I2S_NUM_PLAY; // Use I2S_NUM_PLAY defined earlier
      |            ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main_ws.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
